Connection string and EF Core dependency.

--- a/Store/appsettings.json
+++ b/Store/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "StoreConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Store;MultipleActiveResultSets=true"
+  }
 }
